--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,17 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sockets</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.dev.js"></script>  
 </head>
 <body>
     <div id="time"></div>
+    <table id="table" border="1">
+        <tr>
+            <th>Equip ID</th>
+            <th>Color</th> 
+        </tr>
+    </table>
     <script src="main.js"></script>    
 </body>
 </html>
